# polars-lake

./: Cargo.toml  README.md  build.rs  call.py  producer.py  producer2.py  taxi.py  test.py
proto/: db.proto  db_pb2.py  db_pb2_grpc.py
src/: buckets.rs  database.rs  dataset.rs  main.rs  misc  rocket.rs  server.rs  storage.rs  stream  streamm.rs
