[package]
name = "polars-lake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
arrow2 = { version = "0.16.0", features = ["io_json"] }
polars = { version = "0.27.2", features = ["ipc", "parquet", "lazy", "streaming", "dtype-categorical", "partition_by", "semi_anti_join"] }
polars-io = { version = "0.27.2", features = ["ipc"] }
rayon = "1.6.1"
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
serde = "1.0.147"
serde_json = "1.0.59"
