[package]
name = "polars-lake"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
anyhow = "1.0.69"
polars = { version = "0.33.2", features = ["ipc", "parquet", "lazy", "partition_by", "dtype-full", "semi_anti_join", "cse"] }
polars-io = { version = "0.33.2", features = ["ipc", "ipc_streaming"] }
polars-sql = "0.33.2"
rayon = "1.6.1"
serde = "1.0.147"
serde_json = "1.0.59"
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.28"
tokio-stream = "0.1.14"
async-stream = "0.3.5"

[build-dependencies]
tonic-build = "0.10"
